RepAI/RepAI/Build RepAIWatch Watch App_2025-07-07T16-37-51.txt

Showing Recent Issues

Build target RepAI of project RepAI with configuration Debug

SwiftCompile normal arm64 Compiling\ SharedSessionManager.swift /Users/grantking/Desktop/RepAI/SharedSessionManager.swift (in target 'RepAI' from project 'RepAI')

Failed frontend command:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swift-frontend -frontend -c -primary-file /Users/grantking/Desktop/RepAI/SharedSessionManager.swift /Users/grantking/Desktop/RepAI/RepAI/ModelProcessing.swift /Users/grantking/Desktop/RepAI/RepAI/ContentView.swift /Users/grantking/Desktop/RepAI/RepAI/RepAIApp.swift /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/DerivedSources/CoreMLGenerated/lstm_core_model/lstm_core_model.swift /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/DerivedSources/CoreMLGenerated/convnet_model/convnet_model.swift /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/DerivedSources/GeneratedAssetSymbols.swift -emit-dependencies-path /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/Objects-normal/arm64/SharedSessionManager.d -emit-const-values-path /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/Objects-normal/arm64/SharedSessionManager.swiftconstvalues -emit-reference-dependencies-path /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/Objects-normal/arm64/SharedSessionManager.swiftdeps -serialize-diagnostics-path /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/Objects-normal/arm64/SharedSessionManager.dia -emit-localized-strings -emit-localized-strings-path /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/Objects-normal/arm64 -target arm64-apple-ios18.4-simulator -Xllvm -aarch64-use-tbi -enable-objc-interop -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator18.4.sdk -I /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Products/Debug-iphonesimulator -F /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Products/Debug-iphonesimulator -no-color-diagnostics -enable-testing -g -debug-info-format\=dwarf -dwarf-version\=5 -module-cache-path /Users/grantking/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -swift-version 5 -enforce-exclusivity\=checked -Onone -D DEBUG -serialize-debugging-options -const-gather-protocols-file /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/Objects-normal/arm64/RepAI_const_extract_protocols.json -enable-experimental-feature DebugDescriptionMacro -enable-bare-slash-regex -empty-abi-descriptor -validate-clang-modules-once -clang-build-session-file /Users/grantking/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -Xcc -working-directory -Xcc /Users/grantking/Desktop/RepAI -resource-dir /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift -enable-anonymous-context-mangled-names -file-compilation-dir /Users/grantking/Desktop/RepAI -Xcc -ivfsstatcache -Xcc /Users/grantking/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/iphonesimulator18.4-22E235-71825a6d136aa4733edcbe86ece5525b.sdkstatcache -Xcc -I/Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/swift-overrides.hmap -Xcc -iquote -Xcc /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/RepAI-generated-files.hmap -Xcc -I/Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/RepAI-own-target-headers.hmap -Xcc -I/Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/RepAI-all-target-headers.hmap -Xcc -iquote -Xcc /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/RepAI-project-headers.hmap -Xcc -I/Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Products/Debug-iphonesimulator/include -Xcc -I/Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/DerivedSources-normal/arm64 -Xcc -I/Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/DerivedSources/arm64 -Xcc -I/Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/DerivedSources -Xcc -DDEBUG\=1 -module-name RepAI -frontend-parseable-output -disable-clang-spi -target-sdk-version 18.4 -target-sdk-name iphonesimulator18.4 -external-plugin-path /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/lib/swift/host/plugins\#/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin/swift-plugin-server -external-plugin-path /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/local/lib/swift/host/plugins\#/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin/swift-plugin-server -in-process-plugin-server-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/libSwiftInProcPluginServer.dylib -plugin-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/plugins -plugin-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/local/lib/swift/host/plugins -o /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Build/Intermediates.noindex/RepAI.build/Debug-iphonesimulator/RepAI.build/Objects-normal/arm64/SharedSessionManager.o -index-unit-output-path /RepAI.build/Debug-iphonesimulator/RepAI.build/Objects-normal/arm64/SharedSessionManager.o -index-store-path /Users/grantking/Library/Developer/Xcode/DerivedData/RepAI-bjddvhmoodtltndultppqfqezpdd/Index.noindex/DataStore -index-system-modules

SwiftCompile normal arm64 /Users/grantking/Desktop/RepAI/SharedSessionManager.swift (in target 'RepAI' from project 'RepAI')
    cd /Users/grantking/Desktop/RepAI
    

/Users/grantking/Desktop/RepAI/SharedSessionManager.swift:206:17: error: argument 'dataType' must precede argument 'strides'
                dataType: .float32
~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~

/Users/grantking/Desktop/RepAI/SharedSessionManager.swift:206:17: Argument 'dataType' must precede argument 'strides'



Build failed    7/7/25, 4:37 PM    4.3 seconds
